# cmake_opencv

./: .gitignore  CMakeLists.txt  README.md
.devcontainer/: Dockerfile  devcontainer.json
app/: CMakeLists.txt  main.cpp
